--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -25,6 +25,15 @@ ca:
     delete_task: Segur que vols esborrar aquesta tasca?
     delete_page: Segur que vols esborrar aquesta pàgina?
     delete_upload: Segur que vols esborrar aquest arxiu?
+  ####
+  not_found:
+    user: "User does not exist."
+    conversation: "Conversation {{id}} not found in this project."
+    project: "The project {{id}} doesn't exist."
+    group: "The group {{id}} doesn't exist."
+    page: "Page {{id}} not found in this project."
+    task_list: "Task list {{id}} not found in this project."
+    task: "Task {{id}} not found in this project."
   deleted:
     conversation: "S'ha esborrat la conversa <b>{{name}}</b>"
     task: "S'ha esborrat la tasca <b>{{name}}</b>"
@@ -129,6 +138,8 @@ ca:
     new:
       title: Crear un compte
       submit: Crear un compte
+      ####
+      no_public_signup: "Public signups are not allowed in this system."
       you_are_logged_in: "Ja tens un compte de Teambox. Si vols entrar com un altre usuari, tanca la sessió i intenta-ho de nou."
       existing_user: "Si ja tens un compte, <a href='{{login_url}}'>identifíca't</a> o <a href='{{forgot_url}}'>restableix la teva contrasenya</a>."
       #####
@@ -241,6 +252,12 @@ ca:
     show:
       edit: Edit
       add_project: Add a project
+    ####
+    errors:
+      already_own: "You already own a group!"
+      not_enabled: "Groups are not enabled on this system"
+      not_admin: "You cannot admin this group"
+      no_edit: "You cannot edit this group"
   projects:
     index:
       title: Activitat en tots els teus projectes
@@ -309,6 +326,8 @@ ca:
       created: S´ha creat el projecte!
       invalid_project: "Projecte no vàlid, corregeix els errors i intenta-ho de nou."
       create_an_example_project: "És la teva primera vegada a Teambox? <a href='{{link}}'>Crea un projecte d'exemple</a> per experimentar i aprendre."
+      ####
+      not_allowed: "You can't create any projects with your current account."
     edit:
       title_settings: Preferències Generals
       title_picture: Logotip del Projecte
@@ -358,6 +377,10 @@ ca:
       invite_from_project: "Invite from Project"
     recent:
       invite: Convidar a {{username}}
+    ####
+    errors:
+      invalid: "Invalid invitation"
+      invalid_code: "Invalid invitation code"
   conversations:
     actions:
       confirm_delete: Estàs segur de voler esborrar aquesta conversa?
@@ -589,6 +612,9 @@ ca:
       transfer: Transferir el projecte
       leave_project: Deixar el Projecte
       confirm_delete: Segur que vols esborrar a aquesta persona del projecte?
+    ####
+    errors:
+      user_or_email: "User not found. Enter his username or email."
   comments:
     comment:
       commented_on: "-"
@@ -617,6 +643,9 @@ ca:
       line3: "No oblidis <b>llegir les instruccions</b> i <b>experimentar</b> creant, editant i esborrant elements!"
       create: Crear el projecte tutorial
       line4: "En aquest projecte no podràs convidar a d'altres usuaris, però si pots fer tota la resta."
+      ####
+      error: "Could not create example project."
+      error_list: "Could not create example project. The following projects are invalid: {{list}}."
   uploads:
     comment_upload_link: Adjunto
     new:
@@ -654,6 +683,9 @@ ca:
       title: Entrar
       video: Breu introducció a Teambox
       submit: Entrar
+      ####
+      activation: "You need to activate your account first"
+      login_failed: "Couldn't log you in as {{login}}"
 
   email:
     user:
