more russian translations (groups, error notifications)

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,11 +18,20 @@ ru:
     comment:
       one: "{{count}} комментарий"
       other: "{{count}} комментариев"
+    not_allowed: Вам нельзя это делать!
   confirm:
     delete_task_list: Вы уверены, что хотите удалить этот список задач?
     delete_task: Вы уверены, что хотите удалить эту задачу?
     delete_page: Вы уверены, что хотите удалить эту страницу?
     delete_upload: Вы уверены, что хотите удалить этот файл?
+  not_found:
+    user: "Пользователь не существует."
+    conversation: "Обсуждение {{id}} не найдено в этом проекте."
+    project: "Проект {{id}} не существует."
+    group: "Группа {{id}} не существует."
+    page: "Страница {{id}} не найдена в этом проекте."
+    task_list: "Список задач {{id}} не найден в этом проекте."
+    task: "Задача {{id}} не найдена в этом проекте."
   deleted:
     conversation: "Обсуждение <b>{{name}}</b> удалено"
     task: "Задача <b>{{name}}</b> удалена"
@@ -94,7 +103,7 @@ ru:
       login: Логин
       first_name: Имя
       last_name: Фамилия
-      biography: Должность
+      biography: О себе
       time_zone: Часовой пояс
       language: Язык
       email: Электронная почта
@@ -127,6 +136,7 @@ ru:
     new:
       title: Создание аккаунта
       submit: Создать запись
+      no_public_signup: "Публичный вход не разрешён в этой системе."
       you_are_logged_in: "У вас уже есть аккаунт. Чтобы войти другим пользователем, сначала выйдите."
       existing_user: "Если у вас уже есть аккаунт, <a href='{{login_url}}'>войдите</a> или <a href='{{forgot_url}}'>восстановите пароль</a>."
       you_already_have_an_account: "Вы уже зарегистрировали электронную почту {{email}}. <a href='{{login_link}}'>Войдите</a> или <a href='{{reset_password_link}}'>сбросьте пароль</a>, если забыли его."
@@ -198,6 +208,50 @@ ru:
       tasks_without_a_due_date: "Задачи без срока"
       you_receive_this_message: "Вы получили это сообщение, потому что подписались на него. Можете отключить его тут {{link}}"
       settings_page: "страница настроек"
+  groups:
+    index:
+      title: Группы
+      groups_in: "Ваши группы"
+      your_group: "Ваша группа"
+      no_groups: "Вы не состоите ни в одной греппе."
+      description: "Группы нужны, чтобы делиться материалами с другими и объединяться под общим именем!"
+      submit_project: Добавить
+      remove_project: Убрать
+    primer:
+      no_group_create: "Вы не владеете группой. {{link}}."
+      create_group: "Создать группу"
+    header:
+      leave: Покинуть
+      remove: Убрать
+    logo_fields:
+      current: Текущий логотип
+      delete: Убрать
+      description: Этот логотип появится на всех проектах данной группы
+      upload: Загрузить
+    search:
+      username_or_email: Логин или электронный адрес
+      invite: Пригласить
+      invite_people: Пригласить людей в эту группу
+    fields:
+      name: Название
+      description: Описание
+      permalink: Адрес
+      permalink_description: Адрес, по которому группа будет доступна
+    new:
+      submit: Создать
+      explain: Вы можете создать только одну группу.
+      title: Создание группы
+      created: Ваша группа создана
+    edit:
+      submit: Обновить
+    show:
+      edit: Изменить
+      add_project: Добавить проект
+    errors:
+      already_own: "Вы уже владеете группой!"
+      not_enabled: "В этой системе группы выключены "
+      not_admin: "Вы не можете администрировать эту группу"
+      no_edit: "Вы не можете изменить эту группу"
   projects:
     index:
       title: RSS для всех ваших проектов
@@ -250,7 +304,7 @@ ru:
       feature1: Посылать обновления статуса.
       feature2: Начинать обсуждение и писать ответы.
       feature3: Загружать файлы.
-      feature4: Назначать задачи.
+      feature4: Назначать и просматривать задачи.
       feature5: Комментировать задачи.
       feature6: Следить за временем, проведённым за задачами.
       feature7: "Создавать, редактировать, просматривать страницы."
@@ -264,6 +318,7 @@ ru:
       created: Ваш проект создан!
       invalid_project: "Неверный проект, исправьте ошибки и попробуйте ещё раз."
       create_an_example_project: "Первый раз в Teambox? <a href='{{link}}'>Создайте пробный проект</a> и поиграйте с ним."
+      not_allowed: "Вам нельзя создавать проекты с вашего текущего аккаунта."
     edit:
       title_settings: Основные настройки
       title_picture: Лого проекта
@@ -283,11 +338,16 @@ ru:
       resend: Послать приглашение заново
       pending: "Письмо послано этому пользователю, но он ещё не подтвердил его."
       discard: Отменить приглашение
+    group_invitation:
+      invited_user: "{{inviter}} пригласил <b>{{invitee}}</b> присоединиться к группе."
+      invited_email: "{{inviter}} пригласил <b>{{email}}</b> присоединиться к группе."
     sent:
       email_sent: "<b>Мы только что послали уведомление со ссылкой подтверждения этому пользователю with</b>. Если они не нашли письмо, проверьте, не упало ли оно в спам или попробуйте другой адрес электронной почты. Если проблема не исчезнет, свяжитесь с администрацией."
     pending:
       to_access_or: участвовать в проекте или
+      to_access_or_group: присоединиться к группе или
       invited_to_join: "{{by}} пригласил вас участвовать в проекте {{project}}."
+      invited_to_join_group: "{{by}} пригласил вас присоединиться к группе {{group}}."
     resend:
       resent: "Приглашение отправлено получателю {{recipient}}. Если письмо не дошло, перечитайте его ещё раз."
       return: Назад
@@ -298,9 +358,14 @@ ru:
       username_or_email: "Введите логин или электронную почту участника"
       invite_people: Пригласить участников в проект
       invite: Пригласить
+      role: "Выбрать роль"
       submit: Послать
+      invite_from_project: "Пригласить из проекта"
     recent:
       invite: Пригласить {{username}}
+    errors:
+      invalid: "Неверное приглашение"
+      invalid_code: "Неверный код приглашение"
   conversations:
     actions:
       confirm_delete: Вы уверены, что хотите удалить это обсуждение?
@@ -530,6 +595,8 @@ ru:
       transfer: Передать владение
       leave_project: Покинуть проект
       confirm_delete: Вы уверены, что хотите выгнать этого милого человека из проекта?
+    errors:
+      user_or_email: "Пользователь не найден. Введине его логин или электронный адрес."
   comments:
     comment:
       commented_on: "-"
@@ -545,6 +612,10 @@ ru:
       task: "Опишите, что нужно сделать в комментариях. Назначьте задачу кому-нибудь. Post updates. Attach results."
     edit:
       submit: Сохранить
+    errors:
+      cannot_update: У вас нет прав обновлять этот комментарий
+    actions:
+      confirm_delete: Вы уверены, что хотите удалить этот комментарий?
   example_projects:
     new:
       learn: Учитесь на примере!
@@ -553,6 +624,8 @@ ru:
       line3: "Внимательно <b>прочитайте инструкции</b> и <b>попробуйте</b> создавать, редактировать, удалять элементы!"
       create: Создать пробный проект
       line4: "В этом проекте вы не сможете приглашать других пользователей, но сможете делать всё остальное."
+      error: "Нельзя создать пробный проект."
+      error_list: "Нельзя создать пробный проект. Следующие проекты не верны: {{list}}."
   uploads:
     comment_upload_link: Вложение
     new:
@@ -561,7 +634,7 @@ ru:
       new_file: Загрузить файл
       max_upload_size: "Максимальный размер {{mb}} МБ"
     form:
-      presence: "Нельзя закачать пустой файл"
+      presence: "Нельзя загружать пустые файлы"
       max_size: "Размер файла не может превышать {{mb}}"
       select_file: Выбрать файл
       description: Название <i>(не обяз.)</i>
@@ -590,6 +663,8 @@ ru:
       title: Вход
       video: Что такое Teambox?
       submit: Вход
+      activation: "Вы должны сначала активировать свой аккаунт"
+      login_failed: "Не получается войти как {{login}}"
 
   email:
     user:
@@ -630,6 +705,7 @@ ru:
       signup: Регистрация
       files: Файлы
       invitations: Приглашения
+      groups: Группы проекта
     global_navigation:
       project_invitations: Приглашения
       home: Главная
@@ -694,6 +770,8 @@ ru:
       teambox_is_a_pm_platform: "Teambox — это платформа для управления проектами, нацеленная на сотрудничество в реальнов мире."
       plan_share_and_collaborate: "Планируйте, делитесь, следите за событиями проекта. Просто, как и должно быть."
       report_abuse: "Это письмо было послано вам по запросу вашего знакомого. Пожалуйста, доложите, если вас замучали."
+    invitation_group:
+      you_have_been_invited_to: "Вас пригласили в группу <b>{{group}}</b>"
     confirm:
       hey: "Эй, {{user_name}}!"
       follow_the_link: "Чтобы <b>завершить регистрацию</b> для Teambox, нужно войти, кликнув сюда:"
@@ -979,6 +1057,12 @@ ru:
             body:
               no_body_generic: "Пожалуйста, напишите в это поле, что вы сделали."
               no_body_task: "Пожалуйста, напишите в это поле, что вы сделали по данной задаче."
+        conversation:
+          attributes:
+            body:
+              no_body_generic: "Чтобы начать обсуждение, напишите, пожалуйста, комментарий."
+            name:
+              no_title: "Пожалуйста, дайте название этому обсуждению."
 
   date:
     yesterday: Вчера
@@ -1000,8 +1084,8 @@ ru:
       default: "%Y-%b-%d, %a %H:%M:%S"
       short: "%H:%M"
       long: "%d %b %Y, %H:%M"
-    am: "am"
-    pm: "pm"
+    am: "утра"
+    pm: "вечера"
 
   support:
     select:
