--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -18,16 +18,14 @@ es:
     comment:
       one: "{{count}} comentario"
       other: "{{count}} comentarios"
-    ####
-    not_allowed: You are not allowed to do that!
+    not_allowed: No tienes permiso para hacer eso
   confirm:
     delete_task_list: ¿Seguro que quieres borrar esta lista de tareas?
     delete_task: ¿Seguro que quieres borrar esta tarea?
     delete_page: ¿Seguro que quieres borrar esta página?
     delete_upload: ¿Seguro que quieres borrar este archivo?
-  ####
   not_found:
-    user: "User does not exist."
+    user: El usuario no existe
     conversation: "Conversation {{id}} not found in this project."
     project: "The project {{id}} doesn't exist."
     group: "The group {{id}} doesn't exist."
@@ -138,8 +136,7 @@ es:
     new:
       title: Crear una cuenta
       submit: Crear cuenta
-      ####
-      no_public_signup: "Public signups are not allowed in this system."
+      no_public_signup: No están permitido crear cuentas sin invitación
       you_are_logged_in: "Ya tienes una cuenta de Teambox. Si quieres entrar como otro usuario, cierra la sesión e inténtalo de nuevo."
       existing_user: "Si ya tienes una cuenta, <a href='{{login_url}}'>identifícate</a> o <a href='{{forgot_url}}'>restablece tu contraseña</a>."
       you_already_have_an_account: "Ya tienes una cuenta de Teambox en {{email}}. <a href='{{login_link}}'>Accede a tu cuenta</a> o <a href='{{reset_password_link}}'>recupera tu contraseña</a> si la has olvidado."
@@ -211,52 +208,50 @@ es:
       tasks_without_a_due_date: "Sin fecha fija"
       you_receive_this_message: "Puedes desactivar estas notificaciones en {{link}}"
       settings_page: "tu página de usuario"
-  ####
   groups:
     index:
-      title: Groups
-      groups_in: "Groups you are in"
-      your_group: "Your group"
-      no_groups: "You do not belong to any groups."
-      description: "Use groups to share resources with others, and to band together projects under a single name!"
-      submit_project: Add
-      remove_project: Remove
+      title: Grupos
+      groups_in: Grupos a los que perteneces
+      your_group: Tu grupo propio
+      no_groups: No perteneces a ningun grupo.
+      description: "Usa los grupos para compartir recursos con otros, y agrupar tus proyectos en un grupo!"
+      submit_project: Añadir
+      remove_project: Borrar
     primer:
-      no_group_create: "You do not own a group. {{link}}."
-      create_group: "Create a group"
+      no_group_create: "No has creado tu propio grupo. {{link}}."
+      create_group: "Crear un grupo"
     header:
-      leave: Leave
-      remove: Remove
+      leave: Abandonar
+      remove: Borrar
     logo_fields:
-      current: Current logo
-      delete: Remove
-      description: This logo will appear on all projects belonging to this group
-      upload: Upload
+      current: Logotipo actual
+      delete: Borrar
+      description: Este logo aparecerá para todos los proyectos de este grupo
+      upload: Enviar
     search:
-      username_or_email: Username or email
-      invite: Invite
-      invite_people: Invite people to the group
+      username_or_email: Usuario o email
+      invite: Invitar
+      invite_people: Invitar a usuarios a este grupo
     fields:
-      name: Name
-      description: Description
+      name: Nombre
+      description: Descripción
       permalink: Permalink
-      permalink_description: Domain your group can be accessed from
+      permalink_description: El dominio desde el que se puede acceder a tu grupo.
     new:
-      submit: Create
-      explain: You can only have one group.
-      title: Create group
-      created: Your group has been created
+      submit: Crear
+      explain: Solo puedes tener un grupo.
+      title: Crear grupo
+      created: El grupo ha sido creado.
     edit:
-      submit: Update
+      submit: Actualizar
     show:
-      edit: Edit
-      add_project: Add a project
-    ####
+      edit: Editar
+      add_project: Añadir un proyecto
     errors:
-      already_own: "You already own a group!"
-      not_enabled: "Groups are not enabled on this system"
-      not_admin: "You cannot admin this group"
-      no_edit: "You cannot edit this group"
+      already_own: "Ya tienes un grupo!"
+      not_enabled: "Los grupos no están activados para esta versión de Teambox"
+      not_admin: "No puedes administrar este grupo"
+      no_edit: "No puedes editar este grupo"
   projects:
     index:
       title: Actividad en todos tus proyectos
@@ -323,8 +318,7 @@ es:
       created: Se ha creado el proyecto!
       invalid_project: "Proyecto no válido, corrige los errores e inténtalo de nuevo."
       create_an_example_project: "¿Es tu primera vez en Teambox? <a href='{{link}}'>Crea un proyecto de ejemplo</a> para experimentar y aprender."
-      ####
-      not_allowed: "You can't create any projects with your current account."
+      not_allowed: "No puedes crear proyectos con tu tipo de cuenta."
     edit:
       title_settings: Preferencias Generales
       title_picture: Logotipo del Proyecto
@@ -344,19 +338,16 @@ es:
       resend: Reenviar email de invitación
       pending: "Se ha enviado un email a este usuario, pero aún no ha confirmado"
       discard: Descartar invitación
-    ####
     group_invitation:
-      invited_user: "{{inviter}} invited <b>{{invitee}}</b> to join the group."
-      invited_email: "{{inviter}} invited <b>{{email}}</b> to join the group."
+      invited_user: "{{inviter}} ha invitado a <b>{{invitee}}</b> para unirse al grupo."
+      invited_email: "{{inviter}} ha invitado a <b>{{email}}</b> para unirse al grupo."
     sent:
       email_sent: "<b>Hemos enviado un email avisando al usuario para que acepte tu invitación</b>. Si no pueden encontrar el email, asegúrate de que no se ha clasificado como spam. Si el problema persiste, escríbenos un email."
     pending:
       to_access_or: para acceder al proyecto o
-      ####
-      to_access_or_group: to access the group or
+      to_access_or_group: para acceder al grupo o
       invited_to_join: "{{by}} te ha invitado a unirte al proyecto {{project}}."
-      ####
-      invited_to_join_group: "{{by}} has invited you to join the group {{group}}."
+      invited_to_join_group: "{{by}} te ha invitado a unirte al grupo {{group}}."
     resend:
       resent: "Hemos reenviado la invitación a {{recipient}}. Si no pueden encontrar el email, asegúrate de que no se ha clasificado como spam."
       return: Volver atrás
@@ -368,16 +359,13 @@ es:
       invite_people: Invitar usuarios al proyecto
       invite: Buscar e invitar
       submit: Enviar
-      ####
-      role: "Select a role"
-      ####
-      invite_from_project: "Invite from Project"
+      role: Escoge un rol
+      invite_from_project: "Invitar a alguien desde otro proyecto"
     recent:
       invite: Invitar a {{username}}
-    ####
     errors:
-      invalid: "Invalid invitation"
-      invalid_code: "Invalid invitation code"
+      invalid: Invitación inválida
+      invalid_code: Código de invitación inválido
   conversations:
     actions:
       confirm_delete: Estar seguro de querer borrar esta conversación?
@@ -608,9 +596,8 @@ es:
       transfer: Transferir el proyecto
       leave_project: Dejar el Proyecto
       confirm_delete: Seguro que quieres borrar a esta persona del proyecto?
-    ####
     errors:
-      user_or_email: "User not found. Enter his username or email."
+      user_or_email: "No se ha encontrado al usuario. Introduce su email o nombre de usuario."
   comments:
     comment:
       commented_on: "-"
@@ -626,11 +613,10 @@ es:
       task: "Define qué debe hacerse en un comentario. Asigna un responsable. Publica actualizaciones. Adjunta resultados."
     edit:
       submit: Guardar
-    ####
     errors:
-      cannot_update: You do not have permission to update this comment
+      cannot_update: No tienes permiso para editar este comentario.
     actions:
-      confirm_delete: Are you sure you want to delete this comment?
+      confirm_delete: Seguro que quieres borrar este comentario?
   example_projects:
     new:
       learn: Proyecto Tutorial
@@ -639,9 +625,8 @@ es:
       line3: "No olvides <b>leer las instrucciones</b> y <b>experimentar</b> creando, editando y borrando elementos!"
       create: Crear el proyecto tutorial
       line4: "En este proyecto no podrás invitar a otros usuarios, pero sí puedes hacer todo lo demás."
-      ####
-      error: "Could not create example project."
-      error_list: "Could not create example project. The following projects are invalid: {{list}}."
+      error: "No se ha podido crear el proyecto de ejemplo."
+      error_list: "No se ha podido crear el proyecto de ejemplo. Estos proyectos no son válidos: {{list}}."
   uploads:
     comment_upload_link: Adjunto
     new:
@@ -679,9 +664,8 @@ es:
       title: Entrar
       video: Breve introducción a Teambox
       submit: Entrar
-      ####
-      activation: "You need to activate your account first"
-      login_failed: "Couldn't log you in as {{login}}"
+      activation: "Debes activar tu cuenta primero"
+      login_failed: "Los datos de acceso para {{login}} no son correctos"
 
   email:
     user:
@@ -722,8 +706,7 @@ es:
       signup: Crear cuenta
       files: Archivos
       invitations: Invitaciones
-      ####
-      groups: Project Groups
+      groups: Grupos de Proyectos
     global_navigation:
       project_invitations: Invitaciones
       home: Home
@@ -788,9 +771,8 @@ es:
       teambox_is_a_pm_platform: "Teambox es una plataforma de gestión de proyectos pensada para el mundo real."
       plan_share_and_collaborate: "Planifica, comparte y manténte al día de lo que se ha hecho. Tan fácil como debería ser."
       report_abuse: "Este email se te ha enviado por petición de tu amigo. Si ha habido un intento de abuso, contáctanos."
-    ####
     invitation_group:
-      you_have_been_invited_to: "You have been invited to the group <b>{{group}}</b>"
+      you_have_been_invited_to: "Has sido invitado al grupo <b>{{group}}</b>"
     confirm:
       hey: "Hola, {{user_name}}!"
       follow_the_link: "Para <b>completar tu registro</b> en Teambox sólo tienes que seguir este enlace:"
@@ -1070,19 +1052,18 @@ es:
         odd: "debe ser impar"
         even: "debe ser par"
         record_invalid: "La validación falló: {{errors}}"
-      ####
       models:
         comment:
           attributes:
             body:
-              no_body_generic: "Please write about what you have done in the box above."
-              no_body_task: "Please write about what you have done for this task in the box above."
+              no_body_generic: "Escribe lo que has hecho en la caja de texto."
+              no_body_task: "Escribe qué has hecho sobre esta tarea."
         conversation:
           attributes:
             body:
-              no_body_generic: "Please write a comment to start the conversation."
+              no_body_generic: "Escribe texto para comenzar la conversación."
             name:
-              no_title: "Please give this conversation a title"
+              no_title: "Esta conversación necesita un título"
 
   date:
     yesterday: Ayer
