Time tracking now localized and improved more!

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -429,6 +429,21 @@ it:
     short_conversation:
       comment: risposta
       comments: risposte
+  ####
+  hours:
+    comments: Comments
+    filter_by: Filter by
+    report: Report
+    week_num: Week {{num}}
+    entry_hours: hrs
+    entry_total: Total
+    week_total: Total
+    all_tasks: All tasks
+    all_users: All users
+    reports:
+      user: Users
+      project: Projects
+      task: Tasks
 
   tasks:
     errors:
