--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -430,6 +430,21 @@ de:
     short_conversation:
       comment: Kommentar
       comments: Kommentare
+  ####
+  hours:
+    comments: Comments
+    filter_by: Filter by
+    report: Report
+    week_num: Week {{num}}
+    entry_hours: hrs
+    entry_total: Total
+    week_total: Total
+    all_tasks: All tasks
+    all_users: All users
+    reports:
+      user: Users
+      project: Projects
+      task: Tasks
 
   tasks:
     errors:
