--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -415,6 +415,21 @@ ru:
     short_conversation:
       comment: комментарий
       comments: комментариев
+  ####
+  hours:
+    comments: Comments
+    filter_by: Filter by
+    report: Report
+    week_num: Week {{num}}
+    entry_hours: hrs
+    entry_total: Total
+    week_total: Total
+    all_tasks: All tasks
+    all_users: All users
+    reports:
+      user: Users
+      project: Projects
+      task: Tasks
 
   tasks:
     errors:
