--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,6 +289,7 @@ en:
         title: "{{name}}"
         description: "Recent activities for the project {{name}}"
     fields:
+      tracks_time: "Time tracking"
       archiving: "Archive this project"
       forever: "Delete this project forever"
       owner: "Owner"
