--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -293,7 +293,7 @@ fr:
         description: "Actualités récentes dans le projet {{name}}"
     fields:
       ####
-      tracks_time: "Time tracking"
+      tracks_time: "Enable time tracking"
       archiving: Archiver ce projet
       forever: Supprimer de façon définitive ce projet
       owner: Propriétaire
