--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -20,10 +20,10 @@ ru:
       other: "{{count}} комментариев"
     not_allowed: Вам нельзя это делать!
   confirm:
-    delete_task_list: Вы уверены, что хотите удалить этот список задач?
-    delete_task: Вы уверены, что хотите удалить эту задачу?
-    delete_page: Вы уверены, что хотите удалить эту страницу?
-    delete_upload: Вы уверены, что хотите удалить этот файл?
+    delete_task_list: "Вы уверены, что хотите удалить этот список задач?"
+    delete_task: "Вы уверены, что хотите удалить эту задачу?"
+    delete_page: "Вы уверены, что хотите удалить эту страницу?"
+    delete_upload: "Вы уверены, что хотите удалить этот файл?"
   not_found:
     user: "Пользователь не существует."
     conversation: "Обсуждение {{id}} не найдено в этом проекте."
@@ -236,7 +236,7 @@ ru:
       name: Название
       description: Описание
       permalink: Адрес
-      permalink_description: Адрес, по которому группа будет доступна
+      permalink_description: "Адрес, по которому группа будет доступна"
     new:
       submit: Создать
       explain: Вы можете создать только одну группу.
@@ -289,7 +289,7 @@ ru:
         description: "Последние действия по проекту {{name}}"
     fields:
       ####
-      tracks_time: "Time tracking"
+      tracks_time: "Enable time tracking"
       archiving: "Архивировать этот проект"
       forever: "Удалить этот проект навсегда"
       owner: "Владелец"
@@ -301,14 +301,14 @@ ru:
       archived: Архивировать этот проект
       confirm_delete: "Вы уверены, что хотите навсегда удалить этот проект? ВОССТАНОВИТЬ ЕГО БУДЕТ НЕЛЬЗЯ. Если вы хотите просто скрыть или отложить его, используйте архивирование."
     new_primer:
-      define1: Проект — это группа, разделённая с вашими колегами.
+      define1: "Проект — это группа, разделённая с вашими колегами."
       define2: "Внутри проекта каждый участник может:"
       feature1: Посылать обновления статуса.
       feature2: Начинать обсуждение и писать ответы.
       feature3: Загружать файлы.
       feature4: Назначать и просматривать задачи.
       feature5: Комментировать задачи.
-      feature6: Следить за временем, проведённым за задачами.
+      feature6: "Следить за временем, проведённым за задачами."
       feature7: "Создавать, редактировать, просматривать страницы."
       footer: Этот проект будет принадлежать вам. Вы можете передать этот проект другим участникам в любое время.
       limited: "У вас бесплатный аккаунт, вы можете загрузить только до 50 МБ файлов в этот проект."
