--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -288,6 +288,7 @@ es:
         title: "{{name}}"
         description: "Actividad reciente para {{name}}"
     fields:
+      tracks_time: "Activar time tracking (registro de horas)"
       archiving: Archivar este proyecto
       forever: Borrar permanentemente este proyecto
       owner: Propietario
@@ -415,21 +416,20 @@ es:
     short_conversation:
       comment: respuesta
       comments: respuestas
-  ####
   hours:
-    comments: Comments
-    filter_by: Filter by
-    report: Report
-    week_num: Week {{num}}
+    comments: Comentarios
+    filter_by: Filtrar por
+    report: Informe
+    week_num: Semana {{num}}
     entry_hours: hrs
     entry_total: Total
     week_total: Total
-    all_tasks: All tasks
-    all_users: All users
+    all_tasks: Todas las tareas
+    all_users: Todos los usuarios
     reports:
-      user: Users
-      project: Projects
-      task: Tasks
+      user: Usuarios
+      project: Proyectos
+      task: Tareas
 
   tasks:
     errors:
@@ -602,8 +602,6 @@ es:
       participant: Participante
       admin: Administrador
     header:
-      ####
-      tracks_time: "Time tracking"
       owner: Propietario del proyecto
       observer: Observador
       commenter: Comentador
