--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -15,6 +15,8 @@ ca:
     save: Guardar
     show_more: "Veure {{number}} més"
     print: Imprimir aquesta pàgina
+    prev: Previous
+    next: Next
     comment:
       one: "{{count}} comentari"
       other: "{{count}} comentaris"
@@ -434,7 +436,7 @@ ca:
       comments: respostes
   ####
   hours:
-    comments: Comments
+    comments: Time Entries
     filter_by: Filter by
     report: Report
     week_num: Week {{num}}
