--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,6 +15,8 @@ de:
     save: Speichern
     show_more: Zeige {{number}} mehr
     print: Seite drucken
+    prev: Previous
+    next: Next
     comment:
       one: "{{count}} Kommentar"
       other: "{{count}} Kommentare"
@@ -434,7 +436,7 @@ de:
       comments: Kommentare
   ####
   hours:
-    comments: Comments
+    comments: Time Entries
     filter_by: Filter by
     report: Report
     week_num: Week {{num}}
