--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
     save: Save
     show_more: Show {{number}} more
     print: Print this page
+    prev: Previous
+    next: Next
     comment:
       one: "{{count}} comment"
       other: "{{count}} comments"
@@ -418,7 +420,7 @@ en:
       comment: comment
       comments: comments
   hours:
-    comments: Comments
+    comments: Time Entries
     filter_by: Filter by
     report: Report
     week_num: Week {{num}}
